adding ports to platform.ini windows

--- a/software/research/dispensing-motor/platformio.ini
+++ b/software/research/dispensing-motor/platformio.ini
@@ -12,5 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
+; Linux
+; monitor_port = /dev/ttyUSB0
+; Windows
+monitor_port = COM3
+upload_port = COM3
+test_port = COM3
